# go2hpo_genetic_algorithm

./: .gitignore  404.html  Cargo.toml  README.md  benchmark_rayon.ps1  benchmark_rayon_warmup.ps1  index.html  mkdocs.yaml  objects.inv
.github/workflows/: documentation.yml
docs/: index.md
docs/setup/: documentation.md  installation.md
docs/tutorial/: index.md
research/documentation/: annotation_expansion_analysis.md  benchmark_report.md  benchmark_report_corrected.md  ga_speedup.md  go_annotation_expansion_summary.md  go_enrichment_flags.md  hpo_term_selection.md  parallelization_plan.md  promising_hpo_terms.md
research/research-analysis/: hpo_candidate_shortlist.py  tmp_hpo_lists.py  tmp_hpo_stats.py
search/: search_index.json
setup/: index.html
setup/documentation/: index.html
setup/installation/: index.html
src/: conjunctions.rs  dnf.rs  genetic_algorithm.rs  lib.rs  main.rs  satisfaction_checker.rs
src/annotations/: gene_annotations.rs  gene_id_mapper.rs  gene_ontology_io.rs  gtex_summary_parser.rs  mod.rs
src/export_import/: mod.rs
src/genetic_algorithm/: algorithm.rs  base.rs  ga_algorithm.rs  ga_operators.rs  mod.rs
src/logical_formula/: base.rs  conjunctions.rs  dnf.rs  formula_generator.rs  mod.rs  preexpanded_satisfaction_checker.rs  satisfaction_checker.rs
src/other_models/: constant.rs  decision_tree.rs  greedy.rs  (+3 more)
stats/: plot_ga_stats.py
tests/: ga_components.rs  ga_progression.rs  test_go_io.rs  test_gtex_analyzer.rs  test_hpo2gene.rs  test_integration_gene_set_annotations.rs  test_oboannotation.rs
tutorial/: index.html
(+9 files in other folders)
