[package]
name = "go2hpo_genetic_algorithm"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = "1.0.1"
gtex_analyzer = { git = "https://github.com/loremod/gtex_analyzer", branch = "main", version = "0.1.0" }
lazy_static = "1.5.0"
oboannotation = { git = "https://github.com/P2GX/oboannotation", version = "0.1.2" }
ontolius = "0.5"
rand = "0.9.0"
num = "0.4"
anyhow = "1.0.97"

[dev-dependencies]
flate2 = "1.1.0"
clap = { version = "4.5", features = ["derive"] }
