[package]
name = "go2hpo_genetic_algorithm"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = "1.0.1"
gtex_analyzer = { git = "https://github.com/loremod/gtex_analyzer", branch = "main", version = "0.1.0" }
lazy_static = "1.5.0"
oboannotation = { git = "https://github.com/P2GX/oboannotation", version = "0.1.2" }
hpo2gene_mapper = { git = "https://github.com/loremod/hpo2gene_mapper", version = "0.1.0" }
ontolius = { version = "0.5"}
rand = "0.9.0"
num = "0.4"
anyhow = "1.0.97"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.0"
serde_json = "1.0"
bincode = "1.3"
flate2 = "1.1.0"
rstest = "0.25.0"
clap = { version = "4.5", features = ["derive"] }


# [dev-dependencies]

[profile.release]
debug = true
